assets/style.css
/****** General ***********/
* {
  box-sizing: border-box;
}

:root {
  --main-color: #9356DC;
  --secondary-color: #FF79DA;
  --tertiary-color: #99E2D0;
  --font-family-title: 'Shrikhand', sans-serif;
  --font-family-text: 'Roboto', sans-serif;
}

/****** Homepage ***********/

body {
  margin: 0 auto;
}

.loader-wrapper {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(255, 255, 255, 0.8);
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 9999;
  animation: fadeOut 1s ease 3s forwards, decreaseHeight 1s ease 4s forwards;
}

.loader {
  border: 4px solid var(--main-color, #9356DC);
  border-top: 4px solid transparent;
  border-radius: 50%;
  width: 40px;
  height: 40px;
  animation: spin 2s linear infinite;
}

@keyframes spin {
  0% { transform: rotate(0deg); }
  100% { transform: rotate(360deg); }
}

@keyframes fadeOut {
  0% { opacity: 1; }
  100% { opacity: 0; display: none; }
}

@keyframes decreaseHeight {
  0% { height: 100%; }
  100% { height: 0; }
}

header {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
}

.header {
  padding-left: 105px;
  padding-right: 105px;
  padding-top: 14px;
  padding-bottom: 13px;
  background: var(--White, #FFF);
  display: flex;
  align-items: center;
}

.logo {
  width: 162px;
  height: 36px;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

.location-dot {
  color: #353535;
}

.fa-mobile-screen {
  color: #7E7E7E;
}

.fa-list-ul {
  color: #7E7E7E;
}

.fa-store {
  color: #9356dc;
}

.fa-utensils {
  color: #ffffff;
}

.fa-handshake-angle {
  color: #ffffff;
}

.fa-arrow-left {
  color: #232323;
}

.location {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 17px;
  background-color: #EAEAEA;
  width: 100%;
}

.location p {
  font-family: var(--font-family-text);
  color: #353535;
}

.restaurants-explorer {
  background-color: #F6F6F6;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  height: 326px;
}

.restaurants-explorer h1 {
  font-family: var(--font-family-text);
  font-size: 24px;
  text-align: center;
  margin: 0;
}

.restaurants-explorer p {
  font-family: var(--font-family-text);
  font-size: 18px;
  color: #353535;
  font-weight: 300;
  text-align: center;
  margin: 0;
}

.restaurants-explorer a {
  width: 58%;
  display: flex;
  align-items: center;
  justify-content: center;
  text-decoration: none;
  font-family: var(--font-family-text);
  font-size: 16px;
  color: white;
  border-radius: 25px;
  box-shadow: 0px 8px 20px 0px rgba(0, 0, 0, 0.35);
  background: var(--Button-Gradient, linear-gradient(193deg, var(--main-color) -11.44%, var(--secondary-color) 123.93%));
  border: none;
  height: 50px;
  transition: opacity 0.3s, transform 0.3s;
}

.restaurants-explorer a:hover {
  opacity: 0.8;
  transform: scale(1.05);
}

button {
  font-family: var(--font-family-text);
  font-size: 16px;
  color: white;
  border-radius: 25px;
  box-shadow: 0px 8px 20px 0px rgba(0, 0, 0, 0.35);
  background: var(--Button-Gradient, linear-gradient(193deg, var(--main-color) -11.44%, var(--secondary-color) 123.93%));
  border: none;
  width: 58%;
  height: 50px;
  transition: opacity 0.3s, transform 0.3s;
}

button:hover {
  opacity: 0.8;
  transform: scale(1.05);
}

.fonctionnement {
  display: flex;
}

.fonctionnement h1 {
  font-family: var(--font-family-text);
  font-size: 24px;
  margin-left: 5%;
  margin-top: 12.8%;
  margin-right: 21%;
  margin-bottom: 7%;
}

.list {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 25px;
  margin-bottom: 68px;
}

.list > div {
  display: flex;
  flex-direction: row;
  align-items: center;
  width: 86%;
  position: relative;
}

.circle {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 24px;
  height: 24px;
  background-color: var(--main-color);
  border-radius: 50%;
  color: white;
  font-family: var(--font-family-text);
  font-size: 14.182px;
  line-height: 24px;
  text-align: center;
  position: absolute;
  left: -14px;
}

.working-list {
  display: flex;
  align-items: center;
  border-radius: 20px;
  background: var(--Background, #F6F6F6);
  width: 100%;
  height: 72.379px;
}

.working-list i {
position: absolute;
margin: 25px;
}

.working-list p {
  font-family: var(--font-family-text);
  font-weight: bold;
  margin-left: 65px;
}

.restaurants {
  background-color: #F6F6F6;
  padding-top: 54px;
}
.restaurants h1 {
  font-family: var(--font-family-text);
  font-size: 24px;
  margin-left: 5%;
  margin-right: 21%;
}

.restaurants-cards {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 15px;
  padding-bottom: 66px;
}

.restaurants-cards a {
  text-decoration: none;
  color: black;
  width: 100%
}

.badge {
  background-color: var(--tertiary-color);
  color: #008766;
  padding: 5px 10px;
  border-radius: 5px;
  font-size: 14px;
  border-radius: 0;
  position: absolute;
  margin-top: 10px;
  margin-left: 68%;
  border-radius: 2px;
  font-family: var(--font-family-text);
}

.restaurants-card {
  width: 90%;
  margin: 0 auto;
  background-color: white;
  border-radius: 15px;
}

.restaurants-card img {
  width: 100%;
  height: 231px;
  border-top-left-radius: 15px;
  border-top-right-radius: 15px;
  object-fit: cover;
}

.restaurants-card h2 {
  font-family: var(--font-family-text);
  font-size: 18px;
  margin: 0;
}

.restaurant-text {
  font-family: var(--font-family-text);
  font-size: 17px;
  margin: 0;
}

.restaurants-card-text {
  display: flex;
  padding-left:15px;
  padding-bottom: 12px;
  padding-top: 15px;
  flex-direction: column;
  align-items: flex-start;
  gap: 8px;
  align-self: stretch;
}

.cards-content {
  display: flex;
  justify-content: space-between;
}

.fa-heart {
  margin-top: 23px;
  margin-right: 5%;
  transition: all 0.5s ease;
}

.fa-heart:hover {
  color: white;
  font-weight: 600;
}

.fa-heart:hover::before {
  animation: fillHeart 0.5s forwards;
}

@keyframes fillHeart {
  from {
    color: white;
    font-weight: 600;
  }
  to {
    background: linear-gradient(#9356DC, #FF79DA);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
  }
}

footer {
  background: var(--Grey, #353535);
  display: flex;
  padding: 22px 25px;
  flex-direction: column;
  align-items: flex-start;
  gap: 16px;
}

footer img {
  width: 60%;
  height: auto;
}

footer p {
  font-family: var(--font-family-text);
  color: var(--White, #FFF);
  margin: 0;
}

.footer-text {
  display: flex;
  gap: 7px;
  flex-direction: column;
}

.footer-text div {
  display: flex;
  gap: 11px;
}

.footer-text a {
  text-decoration: none;
}

/****** Menu ***********/

.header i {
  position: absolute;
  left: 20px;
  z-index: 1;
}

.restaurant1 {
  width: 100%;
}

.menu {
background-color: #F6F6F6;
margin-top: -20px;
position: relative;
border-radius: 20px 20px 0 0;
padding-bottom: 40px;
}

.menu-title h1 {
font-family: var(--font-family-title);
font-size: 28px;
}

.menu-title {
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin-left: 5%;
  padding-top: 32px;
}

#heart{
  margin-right: 5%;
  margin-top: 0;
}

.menu h2 {
  font-family: var(--font-family-text);
  font-size: 16px;
  font-weight: 300;
  margin-left: 5%;
  margin-bottom: 0;
}

.border {
  border-top: 3px solid var(--tertiary-color);
  width: 10%;
  margin-left: 5%;
  margin-top: 5px;
}

.menu-card {
  width: 93%;
  margin: 12px auto 12px;
  background-color: white;
  border-radius: 15px;
  transition: transform 0.3s;
  position: relative;
  overflow: hidden;
  opacity: 0;
  animation: fadeIn 2s ease forwards;
}

@keyframes fadeIn {
  0% {
    opacity: 0;
    transform: translateY(20px);
  }
  100% {
    opacity: 1;
    transform: translateY(0);
  }
}

.card-content {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  justify-content: space-between;
  width: 100%;
}

.text {
  flex: 1;
  padding: 15px;
}

.menu-card .fa-circle-check {
  color: white;
  align-self: flex-end;
  padding-top: 39.5px;
  padding-bottom: 39.5px;
  padding-right: 20px;
  padding-left: 20px;
  background-color: var(--tertiary-color);
  border-radius: 0 15px 15px 0;
  opacity: 0;
  transform: translateX(100%);
  transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
  position: absolute;
  visibility: hidden;
  right: 0;
}

.price {
  color: #353535;
  font-weight: 700;
  align-self: flex-end;
  margin-bottom: 10px;
  margin-right: 15px;
  transition: transform 0.3s ease-in-out;
}

.text h3, .text p {
  width: 100%;
  white-space: nowrap;
  transition: width 0.3s;
}

.menu-card:hover .text h3,
.menu-card:hover .text p {
  width: 70%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.menu-card:hover .fa-circle-check {
  transform: translateX(0);
  opacity: 1;
  visibility: visible;
}

.menu-card:hover .price {
  transform: translateX(-60px);
}

.menu-card h3, .menu-card p {
  font-family: var(--font-family-text);
  margin-bottom: 5px;
  margin-top: 0;
}

.menu-card h3 {
  font-size: 18px;
}

.menu-card p {
  font-size: 15px;
}
.button-menu {
  text-align: center;
  display: block;
  margin: 40px auto 0;
  width: 53%;
}

.logo-container {
  display: flex;
  align-items: center;
}

@media screen and (min-width: 1024px) {

.header {
  padding-top: 14px;
  padding-bottom: 13px;
  margin: 0 auto;
}

.restaurant1 {
  height: 500px;
  object-fit: cover;
}

.restaurants-explorer h1 {
  font-size: 40px;
  font-family: var(--font-family-text);
}

.restaurants-explorer a {
 width: 20%;
}

button {
  width: 21%;
}

.fonctionnement h1 {
  margin-top: 50px;
  margin-left: 12%;
  margin-bottom: 25px;
}

.list {
  flex-direction: row;
  justify-content: space-between;
  margin-left: 12%;
  margin-right: 12%;
}

.list > div {
  width: 100%;
}

.working-list p {
  margin-left: 28%;
}

.working-list i {
  margin: 10%;
}

.restaurants-cards {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  margin-left: 7%;
  margin-right: 7%;
}

.restaurants-card {
  width: 78%;
}

.badge {
  margin-left: 25%;
}

.restaurants h1 {
  margin-left: 12%;
  margin-bottom: 25px;
}

footer {
  flex-direction: row-reverse;
  justify-content: flex-start;
}

.footer-text {
  flex-direction: row;
  gap: 20px;
}

.menu {
  width: 73%;
  margin-left: auto;
  margin-right: auto;
}

.menu-title {
  justify-content: center;
  gap: 24px;
}

.border {
  width: 4%;
  margin-left: 20%;
}

.menu-card {
  width: 60%;
}

.menu h2 {
  margin-left: 20%;
  margin-top: 40px;
}

.button-menu {
  width: 20%;
}

footer {
  padding-top: 50px;
}
}

